# PulseMoM

./: .gitignore  CMakeLists.txt  CMakeLists_MoM_Solver.txt  CMakeLists_PEEC_Solver.txt  CMakeLists_optimized.txt  CMakeLists_refactored.txt  CMakeUserPresets.json  CMake与SLN工程对比分析报告.md  Makefile  Makefile.satellite  Makefile.windows  PEEC几何支持说明.md  PulseEM.sln  PulseMoM.sln  PulseMoM.vcxproj  PulseMoM.vcxproj.filters  README.md  README_PULSEEM.md  README_SPLIT_SOLUTIONS.md  VS编译调试指南.md  advanced_benchmark_results_20251115_101710.txt  agent.md  agent_rwg_basis.md  agent_rwg_postproc.md  build_and_run_comprehensive_demo.bat  build_and_test_cgal_robust.bat  build_and_test_gmsh.bat  build_and_test_opencascade.bat  build_gpu_enhanced.bat  build_hpm_test_suite.bat  build_integration_optimized.bat  build_optimized.bat  build_test_suite.bat  build_vs.bat  build_windows.bat  check_results.py  comprehensive_mesh_demo.cpp  cst_peec_validation_report.py  cst_peec_validation_report_fixed.py  electromagnetic_kernels_cmake.txt  (+66 more)
.claude/: ARCHITECTURE_GUARD.md  system_prompt.md  场线路耦合统一接口规范.md
FordCar/: Ford Model T v1.stl  FordCar.msh  FordCar.step  FordCarWithoutTai.msh  FordCarWithoutTai.step  FordCarWithoutTai_results.txt  FordCar_results.txt  config.txt  current_plot.csv  near_field_plot.csv  plot_surface_current.py  surface_current.csv  surface_current.vtk  surface_mesh_plot.txt
apps/: hybrid_cli.c  mom_cli.c  peec_cli.c  peec_cli_msvc_stub.c  pulseem_cli.c
build_optimized/: demo_ui.bat
build_peec/: CMakeCache.txt
cartingCar/: cartingCar.msh  cartingCar.stp  cartingCar_results.txt  current_plot.csv  near_field_plot.csv  surface_current.csv  surface_mesh_plot.txt
docs/: ADVANCED_COMPUTATIONAL_METHODS_REPORT.md  API_Reference.md  ARCHITECTURE_FOLDER_NAMING_ISSUE.md  ARCHITECTURE_REFACTORING_COMPLETE.md  ARCHITECTURE_REFACTORING_FINAL_REPORT.md  ARCHITECTURE_REFACTORING_IMPLEMENTATION.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REFACTORING_SUMMARY.md  ARCHITECTURE_VALIDATION_REPORT.md  ARCHITECTURE_VIOLATION_FIX.md  BUILD_SYSTEM_MIGRATION.md  CAD导入和网格生成检查报告.md  CGAL_2D_ROBUSTNESS_ENHANCEMENT_REPORT.md  CLEANUP_COMPLETED.md  CLEANUP_COMPLETE_REPORT.md  CLEANUP_COMPLETE_STATUS.md  CLEANUP_EXECUTION_PLAN.md  CLEANUP_EXECUTION_REPORT.md  CLEANUP_FINAL_SUMMARY.md  CLEANUP_PHASE2_SUMMARY.md  CLEANUP_PHASE3_SUMMARY.md  CLEANUP_PHASE4_SUMMARY.md  CLEANUP_PHASE5_FINAL.md  CLEANUP_PHASE5_SUMMARY.md  CLEANUP_PHASE6_SUMMARY.md  CLEANUP_SUMMARY.md  CLI_FIXES.md  CODE_CLEANUP_ANALYSIS.md  CODE_CLEANUP_COMPLETE.md  CODE_CLEANUP_FINAL_REPORT.md  CODE_COMPLETION_SUMMARY.md  CODE_DUPLICATION_ANALYSIS.md  CODE_REORGANIZATION_ANALYSIS.md  CODE_STRUCTURE_AND_INTEGRAL_ANALYSIS.md  COMMERCIAL_GRADE_ANALYSIS.md  COMMERCIAL_GRADE_IMPLEMENTATION.md  COMMERCIAL_GRADE_INTEGRAL_LIBRARY_REPORT.md  COMMERCIAL_VALIDATION_REPORT.md  COMMON_UTILS_MATERIALS_ANALYSIS.md  COMPILATION_CHECKLIST.md  (+223 more)
examples/: commercial_grade_demo.c  gpu_optimization_demo.c  parallel_io_examples.c  pcb_workflow_examples.c  peec_mom_integration_examples.c  plugin_architecture_integration.c  wideband_optimization_example.c
python_interface/: README.md  mom_peec_ctypes.py  satellite_mom_peec_ctypes.py
ref_code/scuff-em-master/interactiveTests/: Makefile.am
reports/: performance_report.txt
results/: advanced_benchmark_report_20251115_011841.json  advanced_benchmark_report_20251115_012805.json  advanced_benchmark_report_20251115_084317.json  advanced_benchmark_report_20251115_084835.json  advanced_benchmark_report_20251115_084948.json  advanced_benchmark_report_20251115_090926.json  advanced_benchmark_report_20251115_091514.json  advanced_benchmark_report_20251115_091901.json  advanced_benchmark_report_20251115_092505.json  advanced_benchmark_report_20251115_093058.json  advanced_benchmark_report_20251115_094110.json  advanced_benchmark_report_20251115_094424.json  advanced_benchmark_report_20251115_094519.json  advanced_benchmark_report_20251115_094617.json  advanced_benchmark_report_20251115_094706.json  benchmark_report_20251115_001557.json  benchmark_report_20251115_001644.json  comprehensive_validation_results.json  cst_peec_validation_report.json  fixed_satellite_mom_peec_simulation_data.json  gpu_validation_results_20251115_150729.json  integrated_test_results.json  latest_optimizations_summary_report.json  mom_cli_stub_mesh.txt  mtl_test_results.json  open_source_comparison_results_20251115_105731.json  open_source_comparison_results_20251115_110342.json  open_source_comparison_results_20251115_112415.json  satellite_c_solver_test_results.json  satellite_mom_debug_report.json  satellite_mom_peec_final_animation_data.json  satellite_mom_peec_final_report.json  satellite_mom_peec_key_results.json  satellite_mom_peec_results_fixed_20251122_152927.json  satellite_mom_peec_results_fixed_20251122_154235.json  satellite_mom_peec_results_fixed_20251122_155633.json  simplified_validation_report.json  simplified_validation_results.json
scripts/: archive_redundant_tests.py  cleanup_tests.py  generate_both_solutions.bat  generate_mom_solution.bat  generate_peec_solution.bat  plot_results.py  validate_architecture.py
src/: PFD_Parser.vcxproj  PulseIE_Core.vcxproj  PulseMoM.vcxproj  PulseMoM_Core.vcxproj  PulsePEEC.vcxproj  Satellite_MoM_PEEC.vcxproj  main.c  main_optimized.c  pfd_parser.c  pfd_parser.h  satellite_main.c  satellite_main_simple.c
tests/: 24G_2x4Patch_EdgeFed_RO3006.stp  README.md  advanced_benchmark_analysis_report.md  advanced_benchmark_testing.py  advanced_benchmark_testing_clean.py  antenna_simulation_examples.c  backend_improvements_summary.py  benchmark_runner.py  build_layered_green_min_msvc.bat  build_verify_fix.bat  cad_mesh_integration.c  circuit_coupling_example.c  commercial_validation_suite.c  comprehensive_benchmark_testing.c  comprehensive_integration_demo.c  comprehensive_latest_libraries_validation.py  comprehensive_optimization_test_suite.c  comprehensive_performance_benchmark.py  comprehensive_performance_benchmarks.py  comprehensive_test_suite.c  comprehensive_test_suite_msvc_stub.c  (+47 more)
(+13843 files in other folders)
